--- a/main.ipynb
+++ b/main.ipynb
@@ -464,7 +464,7 @@
    "outputs": [],
    "source": [
     "def minimize_migration_cost(variables, previous_state, bqm, datacenter_state):\n",
-    "    A = 20\n",
+    "    A = 23\n",
     "    linear = dict()\n",
     "    quadratic = dict()\n",
     "    to_vms = group_by(variables, 1)\n",
@@ -688,38 +688,633 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2023-01-12 13:05:54,023] ERROR in app: Exception on / [POST]\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\valte\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\flask\\app.py\", line 2073, in wsgi_app\n",
-      "    response = self.full_dispatch_request()\n",
-      "  File \"C:\\Users\\valte\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\flask\\app.py\", line 1518, in full_dispatch_request\n",
-      "    rv = self.handle_user_exception(e)\n",
-      "  File \"C:\\Users\\valte\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\flask\\app.py\", line 1516, in full_dispatch_request\n",
-      "    rv = self.dispatch_request()\n",
-      "  File \"C:\\Users\\valte\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\flask\\app.py\", line 1502, in dispatch_request\n",
-      "    return self.ensure_sync(self.view_functions[rule.endpoint])(**req.view_args)\n",
-      "  File \"C:\\Users\\valte\\AppData\\Local\\Temp\\ipykernel_26752\\1923799858.py\", line 41, in optimize_allocation\n",
-      "    solution = solve(bqm, device)\n",
-      "  File \"C:\\Users\\valte\\AppData\\Local\\Temp\\ipykernel_26752\\2886451771.py\", line 14, in solve\n",
-      "    sample = sampleset.first.sample\n",
-      "  File \"C:\\Users\\valte\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\dimod\\sampleset.py\", line 890, in first\n",
-      "    return next(self.data(sorted_by='energy', name='Sample'))\n",
-      "  File \"C:\\Users\\valte\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\dimod\\sampleset.py\", line 1093, in data\n",
-      "    record = self.record\n",
-      "  File \"C:\\Users\\valte\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\dimod\\sampleset.py\", line 931, in record\n",
-      "    self.resolve()\n",
-      "  File \"C:\\Users\\valte\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\dimod\\sampleset.py\", line 1291, in resolve\n",
-      "    samples = self._result_hook(self._future)\n",
-      "  File \"C:\\Users\\valte\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\dwave\\cloud\\computation.py\", line 858, in <lambda>\n",
-      "    self, lambda f: f.wait_sampleset())\n",
-      "  File \"C:\\Users\\valte\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\dwave\\cloud\\computation.py\", line 790, in wait_sampleset\n",
-      "    result = self._load_result()\n",
-      "  File \"C:\\Users\\valte\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\dwave\\cloud\\computation.py\", line 928, in _load_result\n",
-      "    raise self._exception\n",
-      "  File \"C:\\Users\\valte\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\dwave\\cloud\\client\\base.py\", line 1446, in _handle_problem_status\n",
-      "    raise SolverFailureError(errmsg)\n",
-      "dwave.cloud.exceptions.SolverFailureError: Problem not accepted because user sardana.ivanova@helsinki.fi has insufficient remaining solver access time in project DEV\n",
-      "127.0.0.1 - - [12/Jan/2023 13:05:54] \"POST / HTTP/1.1\" 500 -\n"
+      "127.0.0.1 - - [12/Jan/2023 16:07:52] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 16, 0) 1\n",
+      "(1, 19, 12) 1\n",
+      "(2, 5, 16) 1\n",
+      "(3, 4, 4) 1\n",
+      "(4, 0, 10) 1\n",
+      "(5, 18, 3) 1\n",
+      "(6, 8, 7) 1\n",
+      "(7, 13, 18) 1\n",
+      "(8, 6, 19) 1\n",
+      "(9, 2, 13) 1\n",
+      "(10, 9, 5) 1\n",
+      "(11, 7, 11) 1\n",
+      "(12, 10, 2) 1\n",
+      "(13, 17, 9) 1\n",
+      "(14, 14, 15) 1\n",
+      "(15, 1, 17) 1\n",
+      "(16, 11, 1) 1\n",
+      "(17, 15, 14) 1\n",
+      "(18, 12, 6) 1\n",
+      "(19, 3, 8) 1\n",
+      "The problem contains 380 variables.\n",
+      "Constructing qubo...\n",
+      "Number of quadratic terms 7030\n",
+      "Solving QUBO on LeapHybrid\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [12/Jan/2023 16:08:05] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 16, 4) 1\n",
+      "(1, 19, 4) 1\n",
+      "(5, 18, 4) 1\n",
+      "(12, 10, 2) 1\n",
+      "(13, 17, 4) 1\n",
+      "(14, 14, 0) 1\n",
+      "(17, 15, 4) 1\n",
+      "The problem contains 360 variables.\n",
+      "Constructing qubo...\n",
+      "Number of quadratic terms 6480\n",
+      "Solving QUBO on LeapHybrid\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [12/Jan/2023 16:08:17] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 16, 3) 1\n",
+      "(1, 19, 5) 1\n",
+      "(5, 18, 7) 1\n",
+      "(13, 17, 2) 1\n",
+      "(17, 15, 1) 1\n",
+      "The problem contains 320 variables.\n",
+      "Constructing qubo...\n",
+      "Number of quadratic terms 5440\n",
+      "Solving QUBO on LeapHybrid\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [12/Jan/2023 16:08:31] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 16, 3) 1\n",
+      "(1, 19, 7) 1\n",
+      "(5, 18, 3) 1\n",
+      "(13, 17, 5) 1\n",
+      "(17, 15, 7) 1\n",
+      "The problem contains 320 variables.\n",
+      "Constructing qubo...\n",
+      "Number of quadratic terms 5440\n",
+      "Solving QUBO on LeapHybrid\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [12/Jan/2023 16:08:45] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 16, 5) 1\n",
+      "(1, 19, 3) 1\n",
+      "(5, 18, 7) 1\n",
+      "(13, 17, 7) 1\n",
+      "(17, 15, 5) 1\n",
+      "The problem contains 320 variables.\n",
+      "Constructing qubo...\n",
+      "Number of quadratic terms 5440\n",
+      "Solving QUBO on LeapHybrid\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [12/Jan/2023 16:08:59] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 16, 7) 1\n",
+      "(1, 19, 3) 1\n",
+      "(5, 18, 3) 1\n",
+      "(13, 17, 5) 1\n",
+      "(17, 15, 5) 1\n",
+      "The problem contains 300 variables.\n",
+      "Constructing qubo...\n",
+      "Number of quadratic terms 4950\n",
+      "Solving QUBO on LeapHybrid\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [12/Jan/2023 16:09:12] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 16, 3) 1\n",
+      "(1, 19, 5) 1\n",
+      "(5, 18, 7) 1\n",
+      "(13, 17, 7) 1\n",
+      "(17, 15, 5) 1\n",
+      "The problem contains 300 variables.\n",
+      "Constructing qubo...\n",
+      "Number of quadratic terms 4950\n",
+      "Solving QUBO on LeapHybrid\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [12/Jan/2023 16:09:23] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 16, 3) 1\n",
+      "(1, 19, 5) 1\n",
+      "(5, 18, 5) 1\n",
+      "(13, 17, 7) 1\n",
+      "(17, 15, 7) 1\n",
+      "The problem contains 300 variables.\n",
+      "Constructing qubo...\n",
+      "Number of quadratic terms 4950\n",
+      "Solving QUBO on LeapHybrid\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [12/Jan/2023 16:09:37] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 16, 5) 1\n",
+      "(1, 19, 3) 1\n",
+      "(5, 18, 7) 1\n",
+      "(13, 17, 7) 1\n",
+      "(17, 15, 5) 1\n",
+      "The problem contains 280 variables.\n",
+      "Constructing qubo...\n",
+      "Number of quadratic terms 4480\n",
+      "Solving QUBO on LeapHybrid\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [12/Jan/2023 16:09:49] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 16, 7) 1\n",
+      "(1, 19, 5) 1\n",
+      "(5, 18, 3) 1\n",
+      "(13, 17, 3) 1\n",
+      "(17, 15, 5) 1\n",
+      "The problem contains 280 variables.\n",
+      "Constructing qubo...\n",
+      "Number of quadratic terms 4480\n",
+      "Solving QUBO on LeapHybrid\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [12/Jan/2023 16:10:02] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 16, 7) 1\n",
+      "(1, 19, 5) 1\n",
+      "(5, 18, 7) 1\n",
+      "(13, 17, 5) 1\n",
+      "(17, 15, 3) 1\n",
+      "The problem contains 260 variables.\n",
+      "Constructing qubo...\n",
+      "Number of quadratic terms 4030\n",
+      "Solving QUBO on LeapHybrid\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [12/Jan/2023 16:10:15] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 16, 7) 1\n",
+      "(1, 19, 5) 1\n",
+      "(5, 18, 3) 1\n",
+      "(13, 17, 5) 1\n",
+      "The problem contains 260 variables.\n",
+      "Constructing qubo...\n",
+      "Number of quadratic terms 4030\n",
+      "Solving QUBO on LeapHybrid\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [12/Jan/2023 16:10:27] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 16, 7) 1\n",
+      "(1, 19, 7) 1\n",
+      "(5, 18, 5) 1\n",
+      "(13, 17, 3) 1\n",
+      "The problem contains 260 variables.\n",
+      "Constructing qubo...\n",
+      "Number of quadratic terms 4030\n",
+      "Solving QUBO on LeapHybrid\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [12/Jan/2023 16:10:40] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 16, 5) 1\n",
+      "(1, 19, 7) 1\n",
+      "(5, 18, 3) 1\n",
+      "(13, 17, 3) 1\n",
+      "The problem contains 260 variables.\n",
+      "Constructing qubo...\n",
+      "Number of quadratic terms 4030\n",
+      "Solving QUBO on LeapHybrid\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [12/Jan/2023 16:10:52] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 16, 3) 1\n",
+      "(1, 19, 7) 1\n",
+      "(5, 18, 3) 1\n",
+      "(13, 17, 5) 1\n",
+      "The problem contains 260 variables.\n",
+      "Constructing qubo...\n",
+      "Number of quadratic terms 4030\n",
+      "Solving QUBO on LeapHybrid\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [12/Jan/2023 16:11:05] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 16, 5) 1\n",
+      "(1, 19, 7) 1\n",
+      "(5, 18, 3) 1\n",
+      "(13, 17, 5) 1\n",
+      "The problem contains 260 variables.\n",
+      "Constructing qubo...\n",
+      "Number of quadratic terms 4030\n",
+      "Solving QUBO on LeapHybrid\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [12/Jan/2023 16:11:19] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 16, 3) 1\n",
+      "(1, 19, 5) 1\n",
+      "(5, 18, 5) 1\n",
+      "(13, 17, 7) 1\n",
+      "The problem contains 260 variables.\n",
+      "Constructing qubo...\n",
+      "Number of quadratic terms 4030\n",
+      "Solving QUBO on LeapHybrid\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [12/Jan/2023 16:11:32] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 16, 3) 1\n",
+      "(1, 19, 7) 1\n",
+      "(5, 18, 3) 1\n",
+      "(13, 17, 5) 1\n",
+      "The problem contains 260 variables.\n",
+      "Constructing qubo...\n",
+      "Number of quadratic terms 4030\n",
+      "Solving QUBO on LeapHybrid\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [12/Jan/2023 16:11:45] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 16, 3) 1\n",
+      "(1, 19, 3) 1\n",
+      "(5, 18, 7) 1\n",
+      "(13, 17, 5) 1\n",
+      "The problem contains 260 variables.\n",
+      "Constructing qubo...\n",
+      "Number of quadratic terms 4030\n",
+      "Solving QUBO on LeapHybrid\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [12/Jan/2023 16:11:59] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 16, 5) 1\n",
+      "(1, 19, 3) 1\n",
+      "(5, 18, 7) 1\n",
+      "(13, 17, 3) 1\n",
+      "The problem contains 260 variables.\n",
+      "Constructing qubo...\n",
+      "Number of quadratic terms 4030\n",
+      "Solving QUBO on LeapHybrid\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [12/Jan/2023 16:12:10] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 16, 5) 1\n",
+      "(1, 19, 3) 1\n",
+      "(5, 18, 7) 1\n",
+      "(13, 17, 7) 1\n",
+      "The problem contains 260 variables.\n",
+      "Constructing qubo...\n",
+      "Number of quadratic terms 4030\n",
+      "Solving QUBO on LeapHybrid\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [12/Jan/2023 16:12:22] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 16, 3) 1\n",
+      "(1, 19, 7) 1\n",
+      "(5, 18, 5) 1\n",
+      "(13, 17, 7) 1\n",
+      "The problem contains 240 variables.\n",
+      "Constructing qubo...\n",
+      "Number of quadratic terms 3600\n",
+      "Solving QUBO on LeapHybrid\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [12/Jan/2023 16:12:36] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 16, 7) 1\n",
+      "(1, 19, 3) 1\n",
+      "(5, 18, 7) 1\n",
+      "(13, 17, 5) 1\n",
+      "The problem contains 240 variables.\n",
+      "Constructing qubo...\n",
+      "Number of quadratic terms 3600\n",
+      "Solving QUBO on LeapHybrid\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [12/Jan/2023 16:12:49] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 16, 7) 1\n",
+      "(1, 19, 5) 1\n",
+      "(5, 18, 3) 1\n",
+      "(13, 17, 7) 1\n",
+      "The problem contains 240 variables.\n",
+      "Constructing qubo...\n",
+      "Number of quadratic terms 3600\n",
+      "Solving QUBO on LeapHybrid\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [12/Jan/2023 16:13:03] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 16, 7) 1\n",
+      "(1, 19, 3) 1\n",
+      "(5, 18, 7) 1\n",
+      "(13, 17, 5) 1\n",
+      "The problem contains 240 variables.\n",
+      "Constructing qubo...\n",
+      "Number of quadratic terms 3600\n",
+      "Solving QUBO on LeapHybrid\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [12/Jan/2023 16:13:16] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 16, 3) 1\n",
+      "(1, 19, 5) 1\n",
+      "(5, 18, 3) 1\n",
+      "(13, 17, 7) 1\n",
+      "The problem contains 240 variables.\n",
+      "Constructing qubo...\n",
+      "Number of quadratic terms 3600\n",
+      "Solving QUBO on LeapHybrid\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [12/Jan/2023 16:13:29] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 16, 7) 1\n",
+      "(1, 19, 3) 1\n",
+      "(5, 18, 3) 1\n",
+      "(13, 17, 5) 1\n",
+      "The problem contains 240 variables.\n",
+      "Constructing qubo...\n",
+      "Number of quadratic terms 3600\n",
+      "Solving QUBO on LeapHybrid\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [12/Jan/2023 16:13:40] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 16, 3) 1\n",
+      "(1, 19, 7) 1\n",
+      "(5, 18, 5) 1\n",
+      "(13, 17, 3) 1\n",
+      "The problem contains 220 variables.\n",
+      "Constructing qubo...\n",
+      "Number of quadratic terms 3190\n",
+      "Solving QUBO on LeapHybrid\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [12/Jan/2023 16:13:52] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 16, 5) 1\n",
+      "(1, 19, 5) 1\n",
+      "(5, 18, 7) 1\n",
+      "(13, 17, 7) 1\n"
      ]
     }
    ],
